fix(navbar): Change text color of Home link on hover to black for better visibility in style.css

--- a/page/zodiacsignlists/assets/css/style.css
+++ b/page/zodiacsignlists/assets/css/style.css
@@ -34,7 +34,7 @@ header{
 }
 .navbar #Home:hover{
     background-color: rgb(255, 255, 255);
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 .navbar #ZodiacSignList{
     text-decoration: none;
